Fixed filters getting cut off on left when scrolling

--- a/css/indexmobile.css
+++ b/css/indexmobile.css
@@ -99,7 +99,6 @@ textarea:focus, input:focus { outline: none; }
 	width: 100%;
 	-webkit-overflow-scrolling: touch;
 	overflow-y: hidden; overflow-x: scroll;
-	margin-left: 5%
 }
 #mobile .filters ul
 {
@@ -107,6 +106,7 @@ textarea:focus, input:focus { outline: none; }
 	white-space: nowrap;
 	font-size: 1.4em;
 	margin-top: 5px;
+	margin-left: 25px;
 	padding: 0;
 }
 #mobile .filters ul li
@@ -174,6 +174,7 @@ textarea:focus, input:focus { outline: none; }
 	margin-right: 12px;
 	align-items: stretch;
 	width: 600px;
+	max-width: 600px;
 	overflow: hidden;
 	border-radius: 10px;
 	background-size: cover;
